--- a/MASH-Prototype/DESCRIPTION
+++ b/MASH-Prototype/DESCRIPTION
@@ -10,6 +10,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 SystemRequirements: C++11
-Imports: Rcpp (>= 0.12.12), R6, RcppR6, MASHcpp
+Imports: Rcpp (>= 0.12.12), R6, RcppR6, MASHcpp, hash
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
