--- a/MASH-MACRO/DESCRIPTION
+++ b/MASH-MACRO/DESCRIPTION
@@ -9,5 +9,8 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12)
+SystemRequirements: C++11
+Imports: Rcpp (>= 0.12.12), R6
 LinkingTo: Rcpp
+RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE)
