--- a/MASH-CPP/NAMESPACE
+++ b/MASH-CPP/NAMESPACE
@@ -3,12 +3,14 @@
 export(DEBUG.MASHCPP)
 export(EL4P)
 export(EggQ)
+export(HashMap)
 export(HistoryGeneric)
 export(HistoryTravel)
 export(HumanEventQ)
 export(ImagoQ)
 export(MosquitoFemaleHistory)
 export(RiskQ)
+export(eapplyInvisible)
 export(humanPfMOI)
 export(humanPfSI)
 export(mosquitoPfMOI)
@@ -18,3 +20,4 @@ import(Rcpp)
 importFrom(R6,R6Class)
 importFrom(Rcpp,evalCpp)
 useDynLib(MASHcpp)
+useDynLib(MASHcpp,R_eapplyInvisible)
