--- a/MASH-MACRO/NAMESPACE
+++ b/MASH-MACRO/NAMESPACE
@@ -4,5 +4,7 @@ export(DEBUG.MASHMACRO)
 export(Human)
 export(HumanPop)
 export(MacroPatch)
+export(MosquitoRM)
+export(MosquitoRM.Parameters)
 import(Rcpp)
 importFrom(R6,R6Class)
