--- a/MASH-CPP/inst/AQUA-ELPool.yml
+++ b/MASH-CPP/inst/AQUA-ELPool.yml
@@ -27,10 +27,10 @@ ELPool:
       @section **Description**:
       Generate a single ELPool, a simplified model of aquatic ecology which only includes egg and a single larval stage. See \url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4357799/} and \url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3737150/} for details on model formulation. The daily difference equations are thus formulated as \deqn{L_{t+1}=E_{t}-(\alpha +\gamma +\psi L_{t}^{\sigma})L_{t}} where aquatic stages mature at the constant per-capita rate \eqn{\alpha}. Mortality is given by the per-capita rate \eqn{\alpha +\gamma +\psi L_{t}^{\sigma}}, where \eqn{\gamma} describes all sources of density independent mortality and and the power-law function \eqn{\psi L_{t}^{\sigma}} describes mortality rates as a function of mean density and \eqn{\psi} represents increase in per-capita mortality in response to crowding. For \eqn{\sigma = 1} the relationship gives mean crowding, which is analogous to the classical first-order description of density dependence as described by the logistic growth equation.
       @section **Constructor**:
-          * alpha_new = 0.1: daily mautration rate of aquatic stages (1/alpha is expected duration of aquatic life stages)
-          * psi_new = 0.01: density dependent mortality; increase in per-capita mortality in response to crowding (unit given as 1/L)
-          * gamma_new = 0.1: daily density independent mortality rate
-          * sigma_new = 1: scaling relationship of density dependence in response to crowding
+        * alpha_new = 0.1: daily mautration rate of aquatic stages (1/alpha is expected duration of aquatic life stages)
+        * psi_new = 0.01: density dependent mortality; increase in per-capita mortality in response to crowding (unit given as 1/L)
+        * gamma_new = 0.1: daily density independent mortality rate
+        * sigma_new = 1: scaling relationship of density dependence in response to crowding
       @section **Methods**:
         * oneStep: run daily difference equation
         * get_psi:
@@ -116,6 +116,23 @@ ELPool:
 
     get_ELPool:
       return_type: "Rcpp::List"
+
+    set_ELPool:
+      args:
+        - E_new: double
+        - L_new: double
+      return_type: void
+
+    get_parameters:
+      return_type: "Rcpp::List"
+
+    set_parameters:
+      args:
+        - alpha_new: double
+        - gamma_new: double
+        - psi_new: double
+        - sigma_new: double
+      return_type: void
 
     reset:
       return_type: void
