--- a/MASH-CPP/inst/AQUA-ImagoQ.yml
+++ b/MASH-CPP/inst/AQUA-ImagoQ.yml
@@ -1,12 +1,19 @@
-############################################################
+###############################################################################
 #
-#   MASH
+#       ___   ____  __  _____
+#     /   | / __ \/ / / /   |
+#    / /| |/ / / / / / / /| |
+#   / ___ / /_/ / /_/ / ___ |
+#  /_/  |_\___\_\____/_/  |_|
+#
+#   MASH-CPP
 #   AQUATIC ECOLOGY
 #   ImagoQ class definition
 #   Sean Wu
 #   August 7, 2017
 #
-############################################################
+###############################################################################
+
 
 ImagoQ:
   name_cpp: MASHcpp::ImagoQ
