--- a/MASH-Prototype/DESCRIPTION
+++ b/MASH-Prototype/DESCRIPTION
@@ -11,6 +11,6 @@ Encoding: UTF-8
 LazyData: true
 SystemRequirements: C++11
 NeedsCompilation: yes
-Imports: Rcpp (>= 0.12.12), R6, RcppR6, MASHcpp, hash
+Imports: Rcpp (>= 0.12.12), R6, RcppR6, MASHcpp, hash, deSolve
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
