--- a/MASH-MACRO/NAMESPACE
+++ b/MASH-MACRO/NAMESPACE
@@ -8,5 +8,10 @@ export(K2psi_ELP)
 export(MacroPatch)
 export(MosquitoRM)
 export(MosquitoRM.PARAMETERS)
+export(SimpleMosquito)
+export(biteIntensity_SimEcol)
+export(biteWeight_SimEcol)
+export(makeBitesPlot_SimEcol)
+export(makeBites_SimEcol)
 import(Rcpp)
 importFrom(R6,R6Class)
