remove dam and sire

--- a/MASH-CPP/NAMESPACE
+++ b/MASH-CPP/NAMESPACE
@@ -11,6 +11,7 @@ export(HumanEventQ)
 export(ImagoQ)
 export(MosquitoFemaleHistory)
 export(RiskQ)
+export(dLinkedList)
 export(humanPfMOI)
 export(humanPfSI)
 export(mosquitoPfMOI)
