--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -9,6 +9,8 @@ export(Landscape.Parameters)
 export(MicroLandscapePlot_utility)
 export(MosquitoFemale)
 export(MosquitoMale)
+export(MosquitoPopFemale)
+export(MosquitoPopMale)
 export(Tile)
 export(betaRootA)
 export(betaRootB)
