--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -18,11 +18,12 @@ export(MosquitoFemale)
 export(MosquitoMale)
 export(MosquitoPopFemale)
 export(MosquitoPopMale)
+export(PfSI.MICRO.Setup)
 export(Tile)
 export(betaRootA)
 export(betaRootB)
-export(init_Pathogens_MicroMosquitoFemale_PfSI)
-export(init_Pathogens_MicroMosquitoPopFemale_PfSI)
+export(init_Pathogens_MosquitoFemale_PfSI)
+export(init_Pathogens_MosquitoPopFemale_PfSI)
 export(makeLambda_Emerge)
 export(pointsClustered)
 export(pointsLattice)
