--- a/MASH-MACRO/DESCRIPTION
+++ b/MASH-MACRO/DESCRIPTION
@@ -10,7 +10,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 SystemRequirements: C++11
-Imports: Rcpp (>= 0.12.12), R6, fArma
+Imports: Rcpp (>= 0.12.12), R6
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
