--- a/MASH-MICRO/DESCRIPTION
+++ b/MASH-MICRO/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Your Name
 Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one or more full sentences.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.12), jsonlite, R6
+Imports: Rcpp (>= 0.12.12), jsonlite, R6, MASHcpp, MASHmacro
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
