--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -13,22 +13,30 @@ export(MBITES.BRO.Parameters)
 export(MBITES.BRO.Setup)
 export(MBITES.Cohort.Setup)
 export(MBITES.Generic.Setup)
+export(MicroKernelPlot_utility)
+export(MicroKernel_DistanceMat)
+export(MicroKernel_PowerKernel)
+export(MicroKernel_exactAll)
+export(MicroKernel_exactMvOb)
+export(MicroKernel_prSort)
 export(MicroLandscapePlot_utility)
 export(MosquitoFemale)
 export(MosquitoMale)
 export(MosquitoPopFemale)
 export(MosquitoPopMale)
 export(PfSI.MICRO.Setup)
+export(SEARCH.Kernel.Setup)
 export(Tile)
 export(betaRootA)
 export(betaRootB)
 export(init_Pathogens_MosquitoFemale_PfSI)
 export(init_Pathogens_MosquitoPopFemale_PfSI)
-export(makeLambda_Emerge)
+export(mbitesGeneric_NULL)
 export(pointsClustered)
 export(pointsLattice)
 export(pointsOverdispersed)
 export(pointsPoisson)
 export(sampleIx_utility)
+export(simpleLambda_Emerge)
 import(Rcpp)
 useDynLib(MASHmicro)
