--- a/MASH-MACRO/NAMESPACE
+++ b/MASH-MACRO/NAMESPACE
@@ -4,6 +4,7 @@ export(AQUA.ELP.MACRO.SETUP)
 export(DEBUG.MASHMACRO)
 export(Human)
 export(HumanPop)
+export(HumanPop.Parameters)
 export(K2psi_ELP)
 export(MacroPatch)
 export(MosquitoRM)
@@ -14,9 +15,12 @@ export(SimBitePfSI.Setup)
 export(SimpleMosquito)
 export(biteIntensity_SimEcol)
 export(biteWeight_SimEcol)
+export(bitingWeight_HumanPop)
 export(makeBitesPlot_SimEcol)
 export(makeBites_SimEcol)
 export(plot_PfSI)
+export(siteAges_HumanPop)
+export(sitePops_HumanPop)
 export(util_PfSIHistory)
 import(Rcpp)
 importFrom(R6,R6Class)
