--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -4,6 +4,7 @@ export(AQUA.Emerge.Setup)
 export(AquaticSite)
 export(DEBUG.MASHMICRO)
 export(FeedingSite)
+export(Humans.Setup)
 export(Landscape)
 export(Landscape.Aqua.Parameters)
 export(Landscape.Feeding.Parameters)
@@ -29,6 +30,9 @@ export(SEARCH.Kernel.Setup)
 export(Tile)
 export(betaRootA)
 export(betaRootB)
+export(colLuminosity_utility)
+export(ggColOffset_utility)
+export(ggCol_utility)
 export(init_Pathogens_MosquitoFemale_PfSI)
 export(init_Pathogens_MosquitoPopFemale_PfSI)
 export(mbitesGeneric_NULL)
