EL4P getters & setters

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -3,6 +3,7 @@
 export(AQUA.Emerge.Setup)
 export(AquaticSite)
 export(DEBUG.MASHMICRO)
+export(EL4P)
 export(FeedingSite)
 export(Humans.MICRO.Setup)
 export(Landscape)
