--- a/MASH-CPP/NAMESPACE
+++ b/MASH-CPP/NAMESPACE
@@ -10,6 +10,7 @@ export(HistoryTravel)
 export(HumanEventQ)
 export(ImagoQ)
 export(MosquitoFemaleHistory)
+export(MosquitoMaleHistory)
 export(RiskQ)
 export(dLinkedList)
 export(humanPfMOI)
