--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -15,6 +15,7 @@ export(MBITES.BRO.Parameters)
 export(MBITES.BRO.Setup)
 export(MBITES.Cohort.Setup)
 export(MBITES.Generic.Setup)
+export(MBITES.Male.Setup)
 export(MicroKernelPlot_utility)
 export(MicroKernel_DistanceMat)
 export(MicroKernel_PowerKernel)
