fix MatingQ.hpp and add to DEBUG.MASHCPP

--- a/MASH-CPP/NAMESPACE
+++ b/MASH-CPP/NAMESPACE
@@ -9,6 +9,7 @@ export(HistoryGeneric)
 export(HistoryTravel)
 export(HumanEventQ)
 export(ImagoQ)
+export(MatingQ)
 export(MosquitoFemaleHistory)
 export(MosquitoMaleHistory)
 export(RiskQ)
