MatingSite and SugarSite classes up

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -16,6 +16,7 @@ export(MBITES.BRO.Setup)
 export(MBITES.Cohort.Setup)
 export(MBITES.Generic.Setup)
 export(MBITES.Male.Setup)
+export(MatingSite)
 export(MicroKernelPlot_utility)
 export(MicroKernel_DistanceMat)
 export(MicroKernel_PowerKernel)
@@ -29,6 +30,7 @@ export(MosquitoPopFemale)
 export(MosquitoPopMale)
 export(PfSI.MICRO.Setup)
 export(SEARCH.Kernel.Setup)
+export(SugarSite)
 export(Tile)
 export(betaRootA)
 export(betaRootB)
