parameter generation routines up for SugarSite and MatingSite

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -9,7 +9,9 @@ export(Humans.MICRO.Setup)
 export(Landscape)
 export(Landscape.Aqua.Parameters)
 export(Landscape.Feeding.Parameters)
+export(Landscape.Mate.Parameters)
 export(Landscape.Parameters)
+export(Landscape.Sugar.Parameters)
 export(MBITES.BRO.Cohort.Setup)
 export(MBITES.BRO.Parameters)
 export(MBITES.BRO.Setup)
