mbites-male parameters

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -17,6 +17,7 @@ export(MBITES.BRO.Parameters)
 export(MBITES.BRO.Setup)
 export(MBITES.Cohort.Setup)
 export(MBITES.Generic.Setup)
+export(MBITES.Male.Parameters)
 export(MBITES.Male.Setup)
 export(MatingSite)
 export(MicroKernelPlot_utility)
