M-BITES complex parameters need to be made

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -33,6 +33,7 @@ export(MosquitoMale)
 export(MosquitoPopFemale)
 export(MosquitoPopMale)
 export(PfSI.MICRO.Setup)
+export(PfSI_NULL)
 export(SEARCH.Kernel.Setup)
 export(SugarSite)
 export(Tile)
