MBITES complex parameters done

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -16,6 +16,7 @@ export(MBITES.BRO.Cohort.Setup)
 export(MBITES.BRO.Parameters)
 export(MBITES.BRO.Setup)
 export(MBITES.Cohort.Setup)
+export(MBITES.Complex.Parameters)
 export(MBITES.Complex.Setup)
 export(MBITES.Generic.Setup)
 export(MBITES.Male.Parameters)
