--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -4,6 +4,7 @@ export(AQUA.Emerge.Setup)
 export(AquaticSite)
 export(DEBUG.MASHMICRO)
 export(EL4P)
+export(EL4P_fitK)
 export(FeedingSite)
 export(Humans.MICRO.Setup)
 export(Landscape)
