TEST-MICRO runs

--- a/MASH-MACRO/NAMESPACE
+++ b/MASH-MACRO/NAMESPACE
@@ -9,6 +9,8 @@ export(K2psi_ELP)
 export(MacroPatch)
 export(MosquitoRM)
 export(MosquitoRM.PARAMETERS)
+export(PfLOME_Human)
+export(PfLOME_Pedigree)
 export(PfSI.Parameters)
 export(PfSI.Setup)
 export(SimBitePfSI.Setup)
