--- a/MASH-CPP/DESCRIPTION
+++ b/MASH-CPP/DESCRIPTION
@@ -12,7 +12,7 @@ LazyData: true
 NeedsCompilation: yes
 ByteCompile: yes
 SystemRequirements: C++11
-Imports: Rcpp (>= 0.12.12), R6, RcppR6
+Imports: Rcpp (>= 0.12.12), R6
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
