update nomenclature for spatial address

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -26,6 +26,7 @@ export(MBITES.Generic.Setup)
 export(MBITES.Male.Parameters)
 export(MBITES.Male.Setup)
 export(MatingSite)
+export(MicroKernelPlotOne_utility)
 export(MicroKernelPlot_utility)
 export(MicroKernel_DistanceMat)
 export(MicroKernel_PowerKernel)
