--- a/MASH-CPP/DESCRIPTION
+++ b/MASH-CPP/DESCRIPTION
@@ -10,7 +10,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: yes
-ByteCompile: yes
+ByteCompile: true
 SystemRequirements: C++11
 Imports: Rcpp (>= 0.12.12), R6
 LinkingTo: Rcpp
