--- a/MASH-MICRO/DESCRIPTION
+++ b/MASH-MICRO/DESCRIPTION
@@ -11,3 +11,4 @@ Imports: Rcpp (>= 0.12.12), jsonlite, R6, MASHcpp, MASHmacro
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
+ByteCompile: true
