--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -29,6 +29,7 @@ export(MatingSite)
 export(MicroKernelPlotOne_utility)
 export(MicroKernelPlot_utility)
 export(MicroKernel_DistanceMat)
+export(MicroKernel_FitBeta)
 export(MicroKernel_FitExpCDF)
 export(MicroKernel_PowerKernel)
 export(MicroKernel_exactAll)
