--- a/MASH-CPP/inst/HUMAN-EventQ.yml
+++ b/MASH-CPP/inst/HUMAN-EventQ.yml
@@ -25,7 +25,7 @@ HumanEventQ:
     firstEvent:
       return_type: "Rcpp::List"
     firstTime:
-      return_type: int
+      return_type: double
     rmFirstEventFromQ:
       return_type: void
     rmTagFromQ:
