--- a/MASH-dev/DavidSmith/MASH_0.1/inst/HUMANS-EventQ.yml
+++ b/MASH-dev/DavidSmith/MASH_0.1/inst/HUMANS-EventQ.yml
@@ -25,7 +25,7 @@ HumanEventQ:
     firstEvent:
       return_type: "Rcpp::List"
     firstTime:
-      return_type: int
+      return_type: double
     rmFirstEventFromQ:
       return_type: void
     rmTagFromQ:
