ready to begin incorporating humans

--- a/MASH-MACRO/NAMESPACE
+++ b/MASH-MACRO/NAMESPACE
@@ -7,6 +7,7 @@ export(DEBUG.MASHMACRO)
 export(Human)
 export(HumanPop)
 export(HumanPop.Parameters)
+export(MACRO.Human.Setup)
 export(MacroPatch)
 export(MacroTile)
 export(Mosquito_Base)
