Updated MASH_Networks.yml with SciPy and created a NetworksX exampe file

--- a/MASH-dev/HectorSanchez/NetworksScripts/MASH_Networks.yml
+++ b/MASH-dev/HectorSanchez/NetworksScripts/MASH_Networks.yml
@@ -6,30 +6,45 @@ channels:
 dependencies:
 - decorator=4.0.11=py34_0
 - networkx=1.11=py34_0
+- numpy=1.11.3=py34_0
+- scipy=0.18.1=np111py34_1
+- backports_abc=0.5=py34_0
+- cycler=0.10.0=py34_0
 - gmp=6.1.2=0
-- icu=58.2=0
 - igraph=0.7.1=4
 - libiconv=1.15=0
-- libxml2=2.9.5=2
+- libpng=1.6.34=0
 - mock=2.0.0=py34_0
 - pbr=1.10.0=py34_0
 - protobuf=3.1.0=py34_0
+- pyparsing=2.1.10=py34_0
+- python-dateutil=2.6.0=py34_0
 - python-igraph=0.7.1.post6=py34_1
+- pytz=2017.3=py_2
 - six=1.10.0=py34_1
 - tensorflow=0.12.1=py34_1
+- tornado=4.4.2=py34_0
 - ca-certificates=2017.08.26=ha1e5d58_0
+- freetype=2.5.5=2
+- icu=54.1=0
 - intel-openmp=2018.0.0=h8158457_8
+- libxml2=2.9.4=0
+- matplotlib=2.0.0=np111py34_0
 - mkl=2017.0.4=h1fae6ae_0
-- numpy=1.13.0=py34_0
 - openssl=1.0.2n=hdbc3d79_0
 - pip=9.0.1=py34_1
+- pyqt=5.6.0=py34_2
 - python=3.4.5=0
+- qt=5.6.2=2
 - readline=6.2=2
 - setuptools=27.2.0=py34_0
+- sip=4.18=py34_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
 - wheel=0.29.0=py34_0
 - xz=5.2.3=h0278029_2
 - zlib=1.2.11=hf3cbc9b_2
+- pip:
+  - backports-abc==0.5
 prefix: /Users/chipdelmal/miniconda3/envs/MASH_Networks
 
