add peri-domestic sites; also add OvipositSearchCheck to handle R -> O transitions if in a feeding site with peri-domestic breeding site

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -51,6 +51,7 @@ export(colLuminosity_utility)
 export(ggColOffset_utility)
 export(ggCol_utility)
 export(mbitesGeneric_NULL)
+export(periDomestic_AquaticSite)
 export(pointsClustered)
 export(pointsLattice)
 export(pointsOverdispersed)
