confirm MBITES-Male works with new package

--- a/MASH-MICRO/NAMESPACE
+++ b/MASH-MICRO/NAMESPACE
@@ -18,10 +18,10 @@ export(Landscape.Parameters)
 export(Landscape.Sugar.Parameters)
 export(MBITES.Cohort.Setup)
 export(MBITES.Complex.Parameters)
-export(MBITES.Complex.Setup)
 export(MBITES.Male.Parameters)
 export(MBITES.Male.Setup)
 export(MBITES.Search.Setup)
+export(MBITES.Setup)
 export(MatingSite)
 export(MicroKernelPlot_utility)
 export(MicroKernel_DistanceMat)
