--- a/MASH-dev/SeanWu/MACRO-RCPP/DESCRIPTION
+++ b/MASH-dev/SeanWu/MACRO-RCPP/DESCRIPTION
@@ -9,7 +9,7 @@ Description: One paragraph description of what the package does as
        one or more full sentences.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.12), R6
-LinkingTo: Rcpp, RcppGSL
+LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 SystemRequirements: C++14
 ByteCompile: true
