--- a/MASH-dev/SeanWu/MICROv2/DESCRIPTION
+++ b/MASH-dev/SeanWu/MICROv2/DESCRIPTION
@@ -11,3 +11,5 @@ License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.14), R6
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
+Roxygen: list(markdown = TRUE)
+ByteCompile: true
