Minor changes to pdgpfsim

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,7 @@ MASH-dev/HectorSanchez/VectorControl/Debug/
 *.pdf
 
 *.pdf
+
+MASH-MICRO/R/.MBITES-Bouts.R.swo
+
+MASH-dev/QianZhang/MBITES_GUI/New/demo_json/demo.json
