--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -3,8 +3,10 @@
 export(Aqua_Resource)
 export(Aqua_Resource_Emerge)
 export(Feeding_Resource)
+export(Female_Mosquito)
 export(HashMap)
 export(Human_NULL)
+export(Male_Mosquito)
 export(Mating_Resource)
 export(Mosquito)
 export(Site)
