--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -3,12 +3,13 @@
 export(Aqua_Resource)
 export(Aqua_Resource_Emerge)
 export(Feeding_Resource)
-export(Female_Mosquito)
 export(HashMap)
 export(Human_NULL)
-export(Male_Mosquito)
 export(Mating_Resource)
 export(Mosquito)
+export(Mosquito_Female)
+export(Mosquito_Male)
+export(Mosquito_Population)
 export(Site)
 export(Sugar_Resource)
 export(Tile)
