all resources now inherit from common base class

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -10,6 +10,7 @@ export(Mosquito)
 export(Mosquito_Female)
 export(Mosquito_Male)
 export(Mosquito_Population)
+export(Resource)
 export(Site)
 export(Sugar_Resource)
 export(Tile)
