--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,5 +11,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr
+Imports: R6, futile.logger, pryr, jsonlite
 ByteCompile: true
