--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -13,3 +13,25 @@ RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
 Imports: R6, futile.logger, pryr, jsonlite
 ByteCompile: true
+Collate: 
+    'Auxiliary.R'
+    'HUMAN-Null.R'
+    'Hash-Class.R'
+    'LANDSCAPE-Aqua.R'
+    'LANDSCAPE-EL4P.R'
+    'LANDSCAPE-Emerge.R'
+    'LANDSCAPE-Feeding.R'
+    'LANDSCAPE-Mating.R'
+    'LANDSCAPE-Resource.R'
+    'LANDSCAPE-Site.R'
+    'LANDSCAPE-Sugar.R'
+    'MBITES-Mosquito.R'
+    'MBITES-Bout.R'
+    'MBITES-Globals.R'
+    'MBITES-Initialize.R'
+    'MBITES-MosquitoPop.R'
+    'MBITES-Parameters.R'
+    'MBITES-Resting.R'
+    'PATHOGEN-Generic-SIS.R'
+    'TILE-Class.R'
+    'zzz.R'
