--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -17,7 +17,6 @@ Collate:
     'Auxiliary.R'
     'HUMAN-Initialize.R'
     'HUMAN-Null.R'
-    'HUMAN-Population.R'
     'Hash-Class.R'
     'LANDSCAPE-Aqua.R'
     'LANDSCAPE-EL4P.R'
@@ -34,6 +33,8 @@ Collate:
     'MBITES-MosquitoPop.R'
     'MBITES-Parameters.R'
     'MBITES-Resting.R'
+    'MBITES-Setup.R'
     'PATHOGEN-Generic-SIS.R'
     'TILE-Class.R'
+    'TILE-Initialize.R'
     'zzz.R'
