--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,9 +11,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr, jsonlite
+Imports: R6, futile.logger, pryr, jsonlite, spatstat
 ByteCompile: true
-Collate: 
+Collate:
     'Auxiliary.R'
     'HUMAN-Initialize.R'
     'HUMAN-Null.R'
@@ -30,7 +30,6 @@ Collate:
     'MBITES-Bout.R'
     'MBITES-Globals.R'
     'MBITES-Initialize.R'
-    'MBITES-MosquitoPop.R'
     'MBITES-Parameters.R'
     'MBITES-Resting.R'
     'MBITES-Setup.R'
