--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -20,4 +20,7 @@ export(make_EggQ)
 export(make_ImagoQ)
 export(make_MatingQ)
 export(make_RiskQ)
+export(pointsClustered)
+export(pointsOverdispersed)
+export(pointsPoisson)
 export(sample)
