--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,7 +11,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr, jsonlite, spatstat
+Imports: R6, futile.logger, pryr, jsonlite, spatstat, synchronicity
 ByteCompile: true
 Collate:
     'Auxiliary.R'
