--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,9 +11,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr, jsonlite, spatstat, synchronicity
+Imports: R6, futile.logger, pryr, jsonlite, spatstat
 ByteCompile: true
-Collate:
+Collate: 
     'Auxiliary.R'
     'HUMAN-Initialize.R'
     'HUMAN-Null.R'
@@ -33,6 +33,7 @@ Collate:
     'MBITES-Parameters.R'
     'MBITES-Resting.R'
     'MBITES-Setup.R'
+    'MBITES-Timing.R'
     'PATHOGEN-Generic-SIS.R'
     'TILE-Class.R'
     'TILE-Initialize.R'
