add oogenesis code; add global flag to alert user to run MBITES_Setup before attempting to run a simulation

--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -26,13 +26,19 @@ Collate:
     'LANDSCAPE-Resource.R'
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
+    'MBITES-BloodMeal.R'
     'MBITES-Mosquito.R'
     'MBITES-Bout.R'
+    'MBITES-Energetics.R'
     'MBITES-Globals.R'
+    'MBITES-HostEncounter.R'
     'MBITES-Initialize.R'
+    'MBITES-Oogenesis.R'
+    'MBITES-Oviposition.R'
     'MBITES-Parameters.R'
     'MBITES-Resting.R'
     'MBITES-Setup.R'
+    'MBITES-Survival.R'
     'MBITES-Timing.R'
     'PATHOGEN-Generic-SIS.R'
     'TILE-Class.R'
