--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -20,6 +20,9 @@ export(make_EggQ)
 export(make_ImagoQ)
 export(make_MatingQ)
 export(make_RiskQ)
+export(make_ttEvent_Diurnal)
+export(make_ttEvent_Exp)
+export(make_ttEvent_Gamma)
 export(pointsClustered)
 export(pointsOverdispersed)
 export(pointsPoisson)
