add support C functions for hash tables

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -27,3 +27,6 @@ export(pointsClustered)
 export(pointsOverdispersed)
 export(pointsPoisson)
 export(sample)
+import(Rcpp)
+useDynLib(MBITES)
+useDynLib(MBITES,hash_apply_c)
