--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,7 +11,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr, jsonlite, spatstat
+Imports: Rcpp (>= 0.12.14), R6, futile.logger, pryr, jsonlite, spatstat
+LinkingTo: Rcpp
 ByteCompile: true
 Collate: 
     'Auxiliary.R'
@@ -40,6 +41,7 @@ Collate:
     'MBITES-Setup.R'
     'MBITES-Survival.R'
     'MBITES-Timing.R'
+    'MBITES.R'
     'PATHOGEN-Generic-SIS.R'
     'TILE-Class.R'
     'TILE-Initialize.R'
