--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -34,6 +34,7 @@ Collate:
     'MBITES-Globals.R'
     'MBITES-HostEncounter.R'
     'MBITES-Initialize.R'
+    'MBITES-Mating.R'
     'MBITES-Oogenesis.R'
     'MBITES-Oviposition.R'
     'MBITES-Parameters.R'
