--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -43,7 +43,9 @@ Collate:
     'MBITES-Survival.R'
     'MBITES-Timing.R'
     'MBITES.R'
+    'PATHOGEN-Generic-Pedigree.R'
     'PATHOGEN-Generic-SIS.R'
+    'PATHOGEN-Generic.R'
     'TILE-Class.R'
     'TILE-Initialize.R'
     'zzz.R'
