--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -12,6 +12,7 @@ export(Mosquito)
 export(Mosquito_Female)
 export(Mosquito_Male)
 export(Resource)
+export(SEI_Pathogen)
 export(Site)
 export(Sugar_Resource)
 export(Tile)
