--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -30,6 +30,7 @@ export(pointsClustered)
 export(pointsOverdispersed)
 export(pointsPoisson)
 export(sample)
+export(search_PowerKernel)
 import(Rcpp)
 useDynLib(MBITES)
 useDynLib(MBITES,hash_apply_c)
