--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -9,6 +9,7 @@ export(HashMap)
 export(Human_NULL)
 export(Human_NULL_Initialize)
 export(MBITES_Initialize)
+export(MBITES_Setup)
 export(Mating_Resource)
 export(Mosquito)
 export(Mosquito_Female)
