more initialization fn

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -24,6 +24,7 @@ export(make_EggQ)
 export(make_ImagoQ)
 export(make_MatingQ)
 export(make_RiskQ)
+export(make_ttEvent_Det)
 export(make_ttEvent_Diurnal)
 export(make_ttEvent_Exp)
 export(make_ttEvent_Gamma)
