PQ model, PQ gui, brownian bridge functions
include simulation for primaquine efficacy, a gui for interacting with it (mostly complete), and formulation of a brownian bridge of parasite densities to add stochasticity to the tent functions while preserving the variance structure of the end points

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,8 @@ MASH-dev/HectorSanchez/VectorControl/Debug/
 *.pdf
 
 *.pdf
+MASH-dev/AlecGeorgoff/Benchmarking/Benchmarking_Summary.md:Zone.Identifier
+MASH-dev/JohnHenry/PfLOME_GUI/PQ_GUI.R
+MASH-dev/JohnHenry/PfLOME_GUI/PQ_GUI.R
+MASH-dev/AlecGeorgoff/Benchmarking/Benchmarking_Summary.md:Zone.Identifier
+MASH-dev/JohnHenry/PfLOME_GUI/PfLOME_GUI.R
