flesh out initialization and MBITES-Parameters code

--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -48,7 +48,7 @@ Collate:
     'PATHOGEN-Generic-Pedigree.R'
     'PATHOGEN-Generic-SIS.R'
     'PATHOGEN-Null.R'
-    'SEARCH-Kernel.R'
+    'PATHOGEN-Setup.R'
     'TILE-Class.R'
     'TILE-Initialize.R'
     'TILE-Simulation.R'
