--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -9,11 +9,17 @@ export(HashMap)
 export(Human_NULL)
 export(Human_NULL_Initialize)
 export(MBITES_Initialize)
-export(MBITES_Setup)
+export(MBITES_Setup_BloodMeal)
+export(MBITES_Setup_Energetics)
+export(MBITES_Setup_Oogenesis)
+export(MBITES_Setup_Oviposition)
+export(MBITES_Setup_Survival)
+export(MBITES_Setup_Timing)
 export(Mating_Resource)
 export(Mosquito)
 export(Mosquito_Female)
 export(Mosquito_Male)
+export(PATHOGEN_Setup)
 export(Resource)
 export(SEI_Pathogen)
 export(Site)
@@ -32,7 +38,6 @@ export(pointsClustered)
 export(pointsOverdispersed)
 export(pointsPoisson)
 export(sample)
-export(search_PowerKernel)
 import(Rcpp)
 useDynLib(MBITES)
 useDynLib(MBITES,hash_apply_c)
