add more accessors for MBITES-Parameters

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -37,7 +37,9 @@ export(make_ttEvent_Gamma)
 export(pointsClustered)
 export(pointsOverdispersed)
 export(pointsPoisson)
+export(reset)
 export(sample)
+export(simulation)
 import(Rcpp)
 useDynLib(MBITES)
 useDynLib(MBITES,hash_apply_c)
