--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -39,6 +39,7 @@ export(pointsOverdispersed)
 export(pointsPoisson)
 export(reset)
 export(sample)
+export(set_output)
 export(simulation)
 import(Rcpp)
 useDynLib(MBITES)
