simplify pathogen setup (put more into the pathogen specific functions)

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -26,6 +26,7 @@ export(Site)
 export(Sugar_Resource)
 export(Tile)
 export(Tile_Initialize)
+export(hardreset)
 export(make_EggQ)
 export(make_ImagoQ)
 export(make_MatingQ)
