add option for tracking blood host for females

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -42,6 +42,7 @@ export(reset)
 export(sample)
 export(set_output)
 export(simulation)
+export(trackBloodHost)
 import(Rcpp)
 useDynLib(MBITES)
 useDynLib(MBITES,hash_apply_c)
