--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -22,11 +22,11 @@ Collate:
     'LANDSCAPE-Aqua.R'
     'LANDSCAPE-EL4P.R'
     'LANDSCAPE-Emerge.R'
-    'LANDSCAPE-Feeding.R'
     'LANDSCAPE-Mating.R'
     'LANDSCAPE-Resource.R'
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
+    'Landscape-Feeding.R'
     'MBITES-Mosquito.R'
     'MBITES-BloodMeal.R'
     'MBITES-Bout.R'
