work on MBITES 2 MBDETES

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -8,6 +8,13 @@ export(Generic_Pathogen_Parameters)
 export(HashMap)
 export(Human_NULL)
 export(Human_NULL_Initialize)
+export(MBDETES_Approx)
+export(MBDETES_BstateTransitions)
+export(MBDETES_FstateTransitions)
+export(MBDETES_LstateTransitions)
+export(MBDETES_OstateTransitions)
+export(MBDETES_RperiodTransitions)
+export(MBDETES_StateTransitions)
 export(MBITES_Initialize)
 export(MBITES_Setup_BloodMeal)
 export(MBITES_Setup_Energetics)
