fix MBITES2MBDETES stuff

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -15,6 +15,13 @@ export(MBDETES_LstateTransitions)
 export(MBDETES_OstateTransitions)
 export(MBDETES_RperiodTransitions)
 export(MBDETES_StateTransitions)
+export(MBDETES_getLeaveLaden)
+export(MBDETES_getLeaveUnladen)
+export(MBDETES_getPrOverfeed)
+export(MBDETES_getPrRefeed)
+export(MBDETES_getRestingParam)
+export(MBDETES_getSurvLaden)
+export(MBDETES_getSurvUnladen)
 export(MBITES_Initialize)
 export(MBITES_Setup_BloodMeal)
 export(MBITES_Setup_Energetics)
