stash some changes

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -18,6 +18,7 @@ export(MBDETES_StateTransitions)
 export(MBDETES_getLeaveLaden)
 export(MBDETES_getLeaveUnladen)
 export(MBDETES_getPrOverfeed)
+export(MBDETES_getPrPPRFlight)
 export(MBDETES_getPrRefeed)
 export(MBDETES_getRestingParam)
 export(MBDETES_getSurvLaden)
