Improved the chord plot and added PNG to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ MASH-dev/HectorSanchez/VectorControl/Debug/
 #*.pdf
 #*.doc
 #*.docx
+*.png
 
 ######################################
 # User-specific files
