add local hazards mortality to MBDETES approximation

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -17,6 +17,7 @@ export(MBDETES_RperiodTransitions)
 export(MBDETES_StateTransitions)
 export(MBDETES_getLeaveLaden)
 export(MBDETES_getLeaveUnladen)
+export(MBDETES_getLocalHazMortality)
 export(MBDETES_getPrOverfeed)
 export(MBDETES_getPrPPRFlight)
 export(MBDETES_getPrRefeed)
