add detailed oviposition tracking

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -59,6 +59,7 @@ export(sample)
 export(set_output)
 export(simulation)
 export(trackBloodHost)
+export(trackOviposition)
 import(Rcpp)
 useDynLib(MBITES)
 useDynLib(MBITES,hash_apply_c)
