--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -22,11 +22,11 @@ Collate:
     'LANDSCAPE-Aqua.R'
     'LANDSCAPE-EL4P.R'
     'LANDSCAPE-Emerge.R'
+    'LANDSCAPE-Feeding.R'
     'LANDSCAPE-Mating.R'
     'LANDSCAPE-Resource.R'
+    'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
-    'Landscape-Feeding.R'
-    'Landscape-Site.R'
     'MBDETES-Auxiliary.R'
     'MBITES-Mosquito.R'
     'MBITES-BloodMeal.R'
@@ -35,6 +35,7 @@ Collate:
     'MBITES-Globals.R'
     'MBITES-HostEncounter.R'
     'MBITES-Initialize.R'
+    'MBITES-Logging.R'
     'MBITES-Mating.R'
     'MBITES-Oogenesis.R'
     'MBITES-Oviposition.R'
