--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -6,6 +6,8 @@ export(Bionomics_bloodIntervals)
 export(Bionomics_humanBitingRate)
 export(Bionomics_humanBloodHost)
 export(Bionomics_lifespan)
+export(Bionomics_lifetimeOviposition)
+export(Bionomics_ovipositionInterval)
 export(Bionomics_vectorialCapacity)
 export(Feeding_Resource)
 export(Generic_Pathogen)
