add MBITES_Setup_MBDETES to set behavioral options for MBITES to MBDETES approximation

--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -28,7 +28,7 @@ Collate:
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
     'MBDETES-Auxiliary.R'
-    'MBDETES-Auxiliary.dls.R'
+    'MBDETES-Setup.R'
     'MBITES-Bionomics.R'
     'MBITES-Mosquito.R'
     'MBITES-BloodMeal.R'
