--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -34,6 +34,7 @@ export(MBDETES_getSurvUnladen)
 export(MBITES_Initialize)
 export(MBITES_Setup_BloodMeal)
 export(MBITES_Setup_Energetics)
+export(MBITES_Setup_MBDETES)
 export(MBITES_Setup_Oogenesis)
 export(MBITES_Setup_Oviposition)
 export(MBITES_Setup_Survival)
