--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(Aqua_Resource)
 export(Aqua_Resource_Emerge)
+export(BFAB_B2X)
+export(BFAB_R2X)
+export(BFSB_F2X)
 export(Bionomics_bloodIntervals)
 export(Bionomics_humanBitingRate)
 export(Bionomics_humanBloodHost)
@@ -9,6 +12,8 @@ export(Bionomics_lifespan)
 export(Bionomics_lifetimeOviposition)
 export(Bionomics_ovipositionInterval)
 export(Bionomics_vectorialCapacity)
+export(ELAB_O2X)
+export(ELSB_L2X)
 export(Feeding_Resource)
 export(Generic_Pathogen)
 export(Generic_Pathogen_Parameters)
