--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -11,10 +11,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: Rcpp (>= 0.12.14), R6, futile.logger, pryr, jsonlite, spatstat
+Imports: Rcpp (>= 0.12.14), R6, futile.logger, pryr, jsonlite, spatstat, deSolve
 LinkingTo: Rcpp
 ByteCompile: true
-Collate: 
+Collate:
     'Auxiliary.R'
     'HUMAN-Initialize.R'
     'HUMAN-Null.R'
