--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -28,6 +28,7 @@ Collate:
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
     'MBDETES-Auxiliary.R'
+    'MBDETES-Model.R'
     'MBDETES-Setup.R'
     'MBITES-Bionomics.R'
     'MBITES-Mosquito.R'
