incorporate MBDETES ODE approximations into MBITES; minor correction to R2R ODE model

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -27,17 +27,23 @@ export(MBDETES_LeaveLaden)
 export(MBDETES_LeaveUnladen)
 export(MBDETES_LocalHazMortality)
 export(MBDETES_LstateTransitions)
+export(MBDETES_MortalityPars)
 export(MBDETES_OstateTransitions)
+export(MBDETES_Parameters)
 export(MBDETES_PrLeave)
 export(MBDETES_PrOverfeed)
 export(MBDETES_PrPPRFlight)
 export(MBDETES_PrRefeed)
 export(MBDETES_PrSurvive)
+export(MBDETES_R2R_ODE)
+export(MBDETES_R2R_solve)
 export(MBDETES_RestingParam)
 export(MBDETES_RperiodTransitions)
 export(MBDETES_StateTransitions)
 export(MBDETES_SurvLaden)
 export(MBDETES_SurvUnladen)
+export(MBDETES_cohort_ODE)
+export(MBDETES_cohort_solve)
 export(MBITES_Initialize)
 export(MBITES_Setup_BloodMeal)
 export(MBITES_Setup_Energetics)
