--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -3,8 +3,10 @@
 export(Aqua_Resource)
 export(Aqua_Resource_Emerge)
 export(BFAB_B2X)
+export(BFAB_PAR)
 export(BFAB_R2X)
 export(BFSB_F2X)
+export(BFSB_PAR)
 export(Bionomics_bloodIntervals)
 export(Bionomics_bloodfeedingRate)
 export(Bionomics_humanBitingProportion)
@@ -15,7 +17,9 @@ export(Bionomics_ovipositionInterval)
 export(Bionomics_ovipositionRate)
 export(Bionomics_vectorialCapacity)
 export(ELAB_O2X)
+export(ELAB_PAR)
 export(ELSB_L2X)
+export(ELSB_PAR)
 export(Feeding_Resource)
 export(Generic_Pathogen)
 export(Generic_Pathogen_Parameters)
