add interfaces for expectation probabilities and correct some numerical issues in MBDETES

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -38,8 +38,11 @@ export(MBDETES_OstateTransitions)
 export(MBDETES_Parameters)
 export(MBDETES_PrLeave)
 export(MBDETES_PrOverfeed)
+export(MBDETES_PrOverfeed_calibrate)
 export(MBDETES_PrPPRFlight)
+export(MBDETES_PrPPRFlight_calibrate)
 export(MBDETES_PrRefeed)
+export(MBDETES_PrRefeed_calibrate)
 export(MBDETES_PrSurvive)
 export(MBDETES_R2R_ODE)
 export(MBDETES_R2R_solve)
